default footer image

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,6 +1,4 @@
-.container-fluid#footer{style: "background-image: url('#{s3_image_url(Setting.last.footer_image)}')"}
-  / .footer-image
-  /   = image_tag s3_image_url(Setting.last.footer_image)
+.container-fluid#footer{style: "background-image: url('#{s3_image_url(Setting.footer_image)}')"}
   .row-fluid
     .span12
       .row
