global navigation fixes

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,8 +1,8 @@
 %link{href: "//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.no-icons.min.css", rel: "stylesheet", type: "text/css"}
 %link{href: "//netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css", rel: "stylesheet", type: "text/css"}
-/ %link{href: "http://d1w42w8pbelamn.cloudfront.net/assets/application-85090e91c472f2d28846db739e443393.css", rel: "stylesheet", type: "text/css"}
-= stylesheet_link_tag 'application', media: 'all'
-= javascript_include_tag 'application'
+= stylesheet_link_tag 'global_navigation', media: 'all'
+%script{src: "//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"}
+%script{src: "//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"}
 = render 'layouts/navigation'
 
 / #header
