--- a/app/assets/stylesheets/global_navigation.css.sass
+++ b/app/assets/stylesheets/global_navigation.css.sass
@@ -1,23 +1,149 @@
-@import bootstrap_config
-@import twitter/bootstrap-no-sprites
-@import font-awesome
-@import twitter/bootstrap/responsive
-@import application/fonts
-@import application/sprites
-@import application/custom_mixins
+//@import bootstrap_config
+//@import twitter/bootstrap-no-sprites
+//@import font-awesome
+//@import twitter/bootstrap/responsive
+//@import application/fonts
+//@import application/sprites
+//@import application/custom_mixins
 
-@import application/base
-@import application/header
-@import application/media_queries
+//@import application/base
+//@import application/header
+//@import application/media_queries
 
 
-@font-face
-  font-family: "FontAwesome"
-  src: url("http://www.chefsteps.com/assets/fontawesome-webfont.eot")
-  src: url("http://www.chefsteps.com/assets/fontawesome-webfont.eot?#iefix") format("eot"), url("http://www.chefsteps.com/assets/fontawesome-webfont.woff") format("woff"), url("http://www.chefsteps.com/assets/fontawesome-webfont.ttf") format("truetype"), url("http://www.chefsteps.com/assets/fontawesome-webfont.svgz#FontAwesomeRegular") format("svg"), url("http://www.chefsteps.com/assets/fontawesome-webfont.svg#FontAwesomeRegular") format("svg")
-  font-style: normal
-  font-weight: normal
+//@font-face
+//  font-family: "FontAwesome"
+//  src: url("http://www.chefsteps.com/assets/fontawesome-webfont.eot")
+//  src: url("http://www.chefsteps.com/assets/fontawesome-webfont.eot?#iefix") format("eot"), url("http://www.chefsteps.com/assets/fontawesome-webfont.woff") format("woff"), url("http://www.chefsteps.com/assets/fontawesome-webfont.ttf") format("truetype"), url("http://www.chefsteps.com/assets/fontawesome-webfont.svgz#FontAwesomeRegular") format("svg"), url("http://www.chefsteps.com/assets/fontawesome-webfont.svg#FontAwesomeRegular") format("svg")
+//  font-style: normal
+//  font-weight: normal
 
-.container
-  margin-left: 24px
+//.container
+//  margin-left: 24px
 
+// Mixins
+=boxsizing
+  box-sizing: border-box
+  -moz-box-sizing: border-box
+  -webkit-box-sizing: border-box
+  -o-box-sizing: border-box
+
+=shadow
+  box-shadow: 0px 0px 5px #888888
+  -moz-box-shadow: 0px 0px 5px #888888
+  -webkit-box-shadow: 0px 0px 5px #888888
+  -o-box-shadow: 0px 0px 5px #888888
+
+=dark-shadow
+  box-shadow: 0px 0px 5px black
+  -moz-box-box-shadow: 0px 0px 5px black
+  -webkit-box-shadow: 0px 0px 5px black
+  -o-box-shadow: 0px 0px 5px black
+
+=radius($value)
+  border-radius: $value
+  -moz-border-radius: $value
+  -webkit-border-radius: $value
+  -o-box-border-radius: $value
+
+=transition($value)
+  transition: $value
+  -moz-transition: $value
+  -webkit-transition: $value
+  -o-transition: $value
+
+/* Colors */
+$orange: #DB7354
+$dark-orange: #D25029
+$darker-orange: #B84724
+$blue: #006DCC
+$blue-opaque: rgba(0,109,204,.8)
+$red: #DA4f49
+$red-opaque: rgba(218,79,73,.8)
+$light-gray: #ccc
+$offwhite: #F2F2F2
+
+.navbar-fixed-top
+  .navbar-inner
+    box-shadow: none
+    background-image: none
+    background-color: $offwhite
+    border-color: $dark-orange
+    border: none
+    border-top: 2px solid $dark-orange
+    @include shadow
+  .brand
+    text-shadow: none
+    color: black
+    padding: 4px 20px
+  .nav
+    .nav-item-border
+      width: 1px
+      height: 100%
+      position: absolute
+      background: -moz-linear-gradient(top, rgba(204,204,204,1) 0%, rgba(235,235,235,1) 60%, rgba(255,255,255,0) 100%)
+      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(204,204,204,1)), color-stop(60%,rgba(235,235,235,1)), color-stop(100%,rgba(255,255,255,0)))
+      background: -webkit-linear-gradient(top, rgba(204,204,204,1) 0%,rgba(235,235,235,1) 60%,rgba(255,255,255,0) 100%)
+      background: -o-linear-gradient(top, rgba(204,204,204,1) 0%,rgba(235,235,235,1) 60%,rgba(255,255,255,0) 100%)
+      background: -ms-linear-gradient(top, rgba(204,204,204,1) 0%,rgba(235,235,235,1) 60%,rgba(255,255,255,0) 100%)
+      background: linear-gradient(to bottom, rgba(204,204,204,1) 0%,rgba(235,235,235,1) 60%,rgba(255,255,255,0) 100%)
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cccccc', endColorstr='#00ffffff',GradientType=0 )
+  .nav > li > a
+    text-shadow: none
+    color: black
+    line-height: 34px
+    font-size: 16px
+    font-weight: 200
+    background: -moz-linear-gradient(top, rgba(232,232,232,1) 0%, rgba(232,232,232,1) 1%, rgba(255,255,255,0) 100%)
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(232,232,232,1)), color-stop(1%,rgba(232,232,232,1)), color-stop(100%,rgba(255,255,255,0)))
+    background: -webkit-linear-gradient(top, rgba(232,232,232,1) 0%,rgba(232,232,232,1) 1%,rgba(255,255,255,0) 100%)
+    background: -o-linear-gradient(top, rgba(232,232,232,1) 0%,rgba(232,232,232,1) 1%,rgba(255,255,255,0) 100%)
+    background: -ms-linear-gradient(top, rgba(232,232,232,1) 0%,rgba(232,232,232,1) 1%,rgba(255,255,255,0) 100%)
+    background: linear-gradient(to bottom, rgba(232,232,232,1) 0%,rgba(232,232,232,1) 1%,rgba(255,255,255,0) 100%)
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e8e8e8', endColorstr='#00ffffff',GradientType=0 )
+    &:hover
+      background: $orange
+      color: white
+  .navbar-form
+    margin: 12px 10px 12px
+    input
+      margin: 0px
+  .btn-navbar
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from($orange), to($dark-orange))
+    background-image: -moz-linear-gradient(top, $orange, $dark-orange)
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=$orange, endColorstr=$dark-orange, GradientType=0)
+    background-color: $orange
+    border-color: $dark-orange
+    .icon-bar
+      background-color: white
+    &:hover
+      background-image: none
+      background-color: $dark-orange
+
+.logo-wrapper
+  $width: 7px
+  $height: 10px
+  $spacing: 2px
+  height: 4*$height + 3*$spacing
+  .logo-window
+    box-shadow: $width + $spacing 0px 0px 0px $dark_orange, 2*($width + $spacing) 0px 0px 0px $dark_orange, 0px $height + $spacing 0px 0px $dark_orange, $width + $spacing $height + $spacing 0px 0px $dark_orange, 2*($width + $spacing) $height + $spacing 0px 0px $dark_orange, 0px 2*($height + $spacing) 0px 0px $dark_orange, $width + $spacing 2*($height + $spacing) 0px 0px $dark_orange, 2*($width + $spacing) 2*($height + $spacing) 0px 0px $dark_orange, 0px 3*($height + $spacing) 0px 0px $dark_orange, $width + $spacing 3*($height + $spacing) 0px 0px $dark_orange, 2*($width + $spacing) 3*($height + $spacing) 0px 0px $dark_orange
+    background: $dark_orange
+    width: $width
+    height: $height
+    overflow: hidden
+    float: left
+  .logo-block
+    float: left
+    margin-left: 22px
+    .logo-text
+      font-size: 30px
+      line-height: 29px
+      font-weight: 500
+      font-family: 'Raleway', sans-serif
+      margin-top: 3px
+    .logo-subtext
+      font-size: 14px
+      margin-top: -5px
+      margin-left: 3px
+      font-weight: 400
+      margin-bottom: -1px
