use cdn for admin font awesome

--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -27,7 +27,7 @@
 @import twitter/bootstrap/dropdowns
 @import twitter/bootstrap/forms
 
-@import font-awesome
+//@import font-awesome
 @import select2
 
 $redLight:      #e63742
