global navigation fixes

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -21,8 +21,8 @@
               %i.icon-angle-down
             %ul.dropdown-menu
               .dropdown-background
-              %li= link_to 'Recipes', recipe_gallery_index_path
-              %li= link_to 'Techniques', techniques_path
+              %li= link_to 'Recipes', recipe_gallery_index_url
+              %li= link_to 'Techniques', techniques_url
           %li.dropdown
             .nav-item-border
             = link_to 'javascript:void(0);', class: 'dropdown-toggle', data: {toggle: 'dropdown'} do
@@ -30,22 +30,8 @@
               %i.icon-angle-down
             %ul.dropdown-menu
               .dropdown-background
-              %li= link_to 'Sous Vide Course', course_path('accelerated-sous-vide-cooking-course')
-              %li= link_to 'Culinary Knowledge', sciences_path
-          = # TODO REMOVE Older Navbar setup below
-          / %li.nav-item-border
-          /   = link_to 'Recipes', recipe_gallery_index_path
-          / %li.nav-item-border
-          /   = link_to 'Techniques', recipe_gallery_index_path
-          / %li.dropdown.nav-item-border
-          /   = link_to 'javascript:void(0);', class: 'dropdown-toggle', data: {toggle: 'dropdown'} do
-          /     Learning
-          /     %i.icon-angle-down
-          /   %ul.dropdown-menu
-          /     .dropdown-background
-          /     %li= link_to 'Techniques', techniques_path
-          /     %li= link_to 'Knowledge', sciences_path
-          /     %li= link_to 'Course', course_path('accelerated-sous-vide-cooking-course')
+              %li= link_to 'Sous Vide Course', course_url('accelerated-sous-vide-cooking-course')
+              %li= link_to 'Culinary Knowledge', sciences_url
           %li
             .nav-item-border
             = link_to 'Community', 'http://forum.chefsteps.com'
@@ -55,12 +41,10 @@
           %li
             .nav-item-border
             - if current_user
-              = link_to 'Profile', user_profile_path(current_user)
+              = link_to 'Profile', user_profile_url(current_user)
             - else
-              = link_to 'Sign in', sign_in_path
+              = link_to 'Sign in', sign_in_url
           %li
             .nav-item-border
-            / = link_to 'Search', search_index_path
-            = form_tag '/search', :method => :get, class: 'navbar-form form-search' do
+            = form_tag search_index_url, :method => :get, class: 'navbar-form form-search' do
               = text_field_tag :q, nil, :placeholder => 'search', class: 'span2 search-query'
-              / = submit_tag 'Search', class: 'btn btn-primary'
