--- a/app/assets/stylesheets/global_navigation.css.sass
+++ b/app/assets/stylesheets/global_navigation.css.sass
@@ -147,3 +147,35 @@ $offwhite: #F2F2F2
       margin-left: 3px
       font-weight: 400
       margin-bottom: -1px
+
+.navbar .nav li.dropdown.open > .dropdown-toggle, .navbar .nav li.dropdown.active > .dropdown-toggle, .navbar .nav li.dropdown.open.active > .dropdown-toggle
+  background: $dark_orange
+  color: white
+
+.navbar .nav > li > .dropdown-menu
+  // min-width: 400px
+  background: none
+  border-radius: 0px
+  margin: 0px
+  li
+    a
+      color: white
+      padding: 3px 10px
+      &:hover
+        background: $dark_orange
+  &:after
+    content: normal
+  &:before
+    content: normal
+  .dropdown-background
+    background: black
+    position: absolute
+    width: 100%
+    height: 100%
+    top: 0px
+    z-index: -1
+    opacity: .6
+
+h1, h2, h3, h4
+  font-family: 'Raleway', sans-serif
+  font-weight: 500
