--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -380,13 +380,11 @@ h1, h2, h3, h4
 /* Course */
 .course-syllabus
   .nested-1
-    padding-left: 10px
+    margin-left: 10px
   .nested-2
-    padding-left: 20px
-  a
-    color: black
-    &:hover
-      color: $orange
+    margin-left: 30px
+    display: list-item
+    list-style-type: disc
 
 //////////
 
