--- a/app/views/courses/_syllabus.html.haml
+++ b/app/views/courses/_syllabus.html.haml
@@ -8,9 +8,13 @@
         %h4= "Module #{module_number}: " + inclusion.activity.title
     - when 1
       .nested-1
-        = link_to course_activity_path(course, inclusion.activity) do
+        - if inclusion.activity.published?
+          = link_to inclusion.activity.title, course_activity_path(course, inclusion.activity)
+        - else
           = inclusion.activity.title
     - when 2
       .nested-2
-        = link_to course_activity_path(course, inclusion.activity) do
+        - if inclusion.activity.published?
+          = link_to inclusion.activity.title, course_activity_path(course, inclusion.activity)
+        - else
           = inclusion.activity.title
