fix circle buttons

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -104,6 +104,9 @@ h1, h2, h3, h4
 .word-wrap
   word-wrap: break-word
 
+.display-inline-fix
+  word-spacing : -4px
+
 ////////////////////////////////////////
 
 /* Media Objects */
@@ -647,7 +650,7 @@ h1, h2, h3, h4
   height: 20px
   width: 20px
   padding: 10px
-  margin: 5px 0px
+  margin: 5px 2px
   border-radius: 50%
   background: $orange
   background-image: none
