--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -13,10 +13,10 @@
     .span6
       %h1= @activity.title.html_safe
     .span6.noprint
-      .pull-left
-        .btn-circle#show-all
-          %i.icon-file
+      .pull-left.display-inline-fix
         - if @course
+          .btn-circle{data: {toggle: 'modal', target: '#syllabus-modal'}}
+            %i.icon-file-alt
           - prev_activity = @course.prev_published_activity(@activity)
           - next_activity = @course.next_published_activity(@activity)
           - if prev_activity
@@ -25,9 +25,9 @@
           - if next_activity
             = link_to course_activity_path(@course, next_activity), class: 'btn-circle' do
               %i.icon-chevron-right
-          .btn-circle{data: {toggle: 'modal', target: '#syllabus-modal'}}
-            %i.icon-file-alt
-      .pull-right
+        .btn-circle#show-all
+          %i.icon-resize-vertical
+      .pull-right.display-inline-fix
         = render 'layouts/social_buttons', media_object: @activity
 
   .row.printable.printable-column
