update show all icon

--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -26,7 +26,7 @@
             = link_to course_activity_path(@course, next_activity), class: 'btn-circle' do
               %i.icon-chevron-right
         .btn-circle#show-all
-          %i.icon-resize-vertical
+          %i.icon-resize-full#show-all-icon
       .pull-right.display-inline-fix
         = render 'layouts/social_buttons', media_object: @activity
 
