--- a/app/views/shared/_media_centered.html.haml
+++ b/app/views/shared/_media_centered.html.haml
@@ -1,9 +1,10 @@
 / Defaults to size medium
-%div{class: "media-centered media-centered-#{ size ||= 'medium' }"}
-  .media-centered-overlay
-  - if media.featured_image
-    = image_tag s3_image_url(media.featured_image)
-  - else
-    = image_tag '/assets/missing.png'
-  .title-block
-    = media.title.html_safe
+- cache media do
+  %div{class: "media-centered media-centered-#{ size ||= 'medium' }"}
+    .media-centered-overlay
+    - if media.featured_image
+      = image_tag s3_image_url(media.featured_image)
+    - else
+      = image_tag '/assets/missing.png'
+    .title-block
+      = media.title.html_safe
