--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -2,12 +2,12 @@
   .navbar-inner
     .container
       = link_to root_url, class: 'brand' do
-        / = image_tag 'logo-window.png', id: 'logo-window'
-        .logo-wrapper
-          .logo-window
-          .logo-block
-            .logo-text ChefSteps
-            .logo-subtext cook connected
+        = image_tag 'logo-large.png', id: 'chefsteps-logo'
+        / .logo-wrapper
+        /   .logo-window
+        /   .logo-block
+        /     .logo-text ChefSteps
+        /     .logo-subtext cook connected
       %button.btn.btn-navbar{data: {toggle: 'collapse', target: '.nav-collapse'}}
         %span.icon-bar
         %span.icon-bar
