--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -4,4 +4,4 @@
 %script{src: "//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"}
 %script{src: "//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"}
 = stylesheet_link_tag 'global_navigation', media: 'all'
-= render 'layouts/navigation'
+= render 'layouts/navigation', external: true
