--- a/app/views/shared/_media_centered.html.haml
+++ b/app/views/shared/_media_centered.html.haml
@@ -1,6 +1,6 @@
 / Defaults to size medium
-- cache media do
-  %div{class: "media-centered media-centered-#{ size ||= 'medium' }"}
+- cache [media, size] do
+  %div{class: "media-centered media-centered-#{size}"}
     .media-centered-overlay
     - if media.featured_image
       = image_tag s3_image_url(media.featured_image)
