--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -5,14 +5,15 @@
 .container#hero-container
   .row
     .span12
-      .swipe#hero-swiper
-        .swipe-wrap
+      - cache @heroes do
+        .swipe#hero-swiper
+          .swipe-wrap
+            - @heroes.each_with_index do |hero, index|
+              %div{class: "item #{'active' if index == 0}", id: "#{'hero-first' if index == 0}"}
+                = render 'shared/media_hero', main_title: hero.activity_type? ? hero.activity_type : 'Recipe', media_object: hero
+        .swipe-indicators#hero-indicators
           - @heroes.each_with_index do |hero, index|
-            %div{class: "item #{'active' if index == 0}", id: "#{'hero-first' if index == 0}"}
-              = render 'shared/media_hero', main_title: hero.activity_type? ? hero.activity_type : 'Recipe', media_object: hero
-      .swipe-indicators#hero-indicators
-        - @heroes.each_with_index do |hero, index|
-          .swipe-indicator-btn.hero-indicator-btn{class: "#{'indicator-active' if index == 0}", id: "hero-swipe-indicator-#{index}", data: {target: '#swiper', :'slide-to-index' => index}}
+            .swipe-indicator-btn.hero-indicator-btn{class: "#{'indicator-active' if index == 0}", id: "hero-swipe-indicator-#{index}", data: {target: '#swiper', :'slide-to-index' => index}}
 
 / .row
 /   .span12
@@ -34,30 +35,33 @@
       .span4
         %h4.text-center 
           = link_to 'Recipes', recipe_gallery_index_path, class: 'black-link'
-        .swipe#recipe-swiper
-          .swipe-wrap
-            - @recipes.each do |recipe|
-              %div
-                = link_to activity_path(recipe) do
-                  = render 'shared/media_centered', media: recipe, size: 'medium'
+        - cache @recipes do
+          .swipe#recipe-swiper
+            .swipe-wrap
+              - @recipes.each do |recipe|
+                %div
+                  = link_to activity_path(recipe) do
+                    = render 'shared/media_centered', media: recipe, size: 'medium'
       .span4
         %h4.text-center
           = link_to 'Techniques', techniques_path, class: 'black-link'
-        .swipe#technique-swiper
-          .swipe-wrap
-            - @techniques.each do |technique|
-              %div
-                = link_to activity_path(technique) do
-                  = render 'shared/media_centered', media: technique, size: 'medium'
+        - cache @techniques do
+          .swipe#technique-swiper
+            .swipe-wrap
+              - @techniques.each do |technique|
+                %div
+                  = link_to activity_path(technique) do
+                    = render 'shared/media_centered', media: technique, size: 'medium'
       .span4
         %h4.text-center
           = link_to 'Knowledge', sciences_path, class: 'black-link'
-        .swipe#knowledge-swiper
-          .swipe-wrap
-            - @sciences.each do |science|
-              %div
-                = link_to activity_path(science) do
-                  = render 'shared/media_centered', media: science, size: 'medium'
+        - cache @sciences do
+          .swipe#knowledge-swiper
+            .swipe-wrap
+              - @sciences.each do |science|
+                %div
+                  = link_to activity_path(science) do
+                    = render 'shared/media_centered', media: science, size: 'medium'
 
 .row.section
   .span12
