update scroll shadow and vertical scroll

--- a/app/views/activities/_main_activity_content.html.haml
+++ b/app/views/activities/_main_activity_content.html.haml
@@ -25,7 +25,7 @@
         %ul
         - activity.used_in_activities.each do |activity|
           %li= link_to activity.title.html_safe, activity
-  .span6.section
+  .span6.section.scroll-shadow-wrapper
     .ordered-steps.scroll-shadow
       .scroll-shadow-content.pull-left
         - activity.steps.each_with_index do |step, index|
