--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -453,9 +453,17 @@ h1, h2, h3, h4
 #content-indicators
   width: 45px
 
-.vertical-swipe
+.vertical-slider-2
   width: 370px
-  height: 208px
+  height: 416px
+  overflow: auto
+  -webkit-overflow-scrolling: touch
+  .item
+    margin: 0px
+
+.vertical-slider-3
+  width: 370px
+  height: 624px
   overflow: auto
   -webkit-overflow-scrolling: touch
   .item
@@ -774,6 +782,9 @@ h1, h2, h3, h4
       width: 220px
 
 /* Scroll Shadow */
+.scroll-shadow-wrapper
+  position: relative
+
 .scroll-overlay-top
   pointer-events: none
   height: 120px
@@ -827,7 +838,7 @@ h1, h2, h3, h4
     width: 285px
     margin: 0px 14px
 
-  .vertical-swipe
+  .vertical-slider
     width: 300px
     height: 168px
 
@@ -846,7 +857,7 @@ h1, h2, h3, h4
   .media-centered-medium
     height: 128px
 
-  .vertical-swipe
+  .vertical-slider
     width: 228px
     height: 128px
 
@@ -890,7 +901,7 @@ h1, h2, h3, h4
   .media-centered-medium
     height: inherit
 
-  .vertical-swipe
+  .vertical-slider
     width: 100%
     height: 400px
 
