--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -36,15 +36,15 @@
         %h4.text-center 
           = link_to 'Recipes', recipe_gallery_index_path, class: 'black-link'
         - cache @recipes do
-          .swipe#recipe-swiper
-            .swipe-wrap
-              - @recipes.each do |recipe|
-                %div
-                  = link_to activity_path(recipe) do
-                    = render 'shared/media_centered', media: recipe, size: 'medium'
-          .vertical-slider-3.infinite-scroll
+          / .swipe#recipe-swiper
+          /   .swipe-wrap
+          /     - @recipes.each do |recipe|
+          /       %div
+          /         = link_to activity_path(recipe) do
+          /           = render 'shared/media_centered', media: recipe, size: 'medium'
+          .vertical-slider-3.scrollfinity
             - @recipes.each do |recipe|
-              %div.infinite-scroll-item
+              %div.scrollfinity-item
                 = link_to activity_path(recipe) do
                   = render 'shared/media_centered', media: recipe, size: 'medium'
       .span4
