--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -838,9 +838,9 @@ h1, h2, h3, h4
     width: 285px
     margin: 0px 14px
 
-  .vertical-slider
+  .vertical-slider-3
     width: 300px
-    height: 168px
+    height: 504px
 
   .media-header-content
     width: 376px
@@ -855,10 +855,6 @@ h1, h2, h3, h4
           font-size: 20px
 
   .media-centered-medium
-    height: 128px
-
-  .vertical-slider
-    width: 228px
     height: 128px
 
   .media-header-content
@@ -900,10 +896,6 @@ h1, h2, h3, h4
 
   .media-centered-medium
     height: inherit
-
-  .vertical-slider
-    width: 100%
-    height: 400px
 
   #footer
     margin: 0px -20px
