--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -36,17 +36,19 @@
         %h4.text-center 
           = link_to 'Recipes', recipe_gallery_index_path, class: 'black-link'
         - cache @recipes do
-          .swipe#recipe-swiper.only-touch
+          .swipe#recipe-swiper
             .swipe-wrap
               - @recipes.each do |recipe|
                 %div
                   = link_to activity_path(recipe) do
                     = render 'shared/media_centered', media: recipe, size: 'medium'
-          .vertical-slider-3.scrollfinity.only-non-touch
-            - @recipes.each do |recipe|
-              %div.scrollfinity-item
-                = link_to activity_path(recipe) do
-                  = render 'shared/media_centered', media: recipe, size: 'medium'
+          / .vertical-slider-2.scrollfinity.only-non-touch.hidden-phone
+          /   - @recipes.each do |recipe|
+          /     %div.scrollfinity-item
+          /       = link_to activity_path(recipe) do
+          /         = render 'shared/media_centered', media: recipe, size: 'medium'
+          / .btn.btn-gray.btn-block.scrollfinity-down.only-non-touch.hidden-phone
+          /   %icon.icon-angle-down
       .span4
         %h4.text-center
           = link_to 'Techniques', techniques_path, class: 'black-link'
