--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -36,39 +36,53 @@
         %h4.text-center 
           = link_to 'Recipes', recipe_gallery_index_path, class: 'black-link'
         - cache @recipes do
-          .swipe#recipe-swiper
+          .swipe#recipe-swiper.only-touch.visible-phone
             .swipe-wrap
               - @recipes.each do |recipe|
                 %div
                   = link_to activity_path(recipe) do
                     = render 'shared/media_centered', media: recipe, size: 'medium'
-          / .vertical-slider-2.scrollfinity.only-non-touch.hidden-phone
-          /   - @recipes.each do |recipe|
-          /     %div.scrollfinity-item
-          /       = link_to activity_path(recipe) do
-          /         = render 'shared/media_centered', media: recipe, size: 'medium'
-          / .btn.btn-gray.btn-block.scrollfinity-down.only-non-touch.hidden-phone
-          /   %icon.icon-angle-down
+          .vertical-slider-2.scrollfinity.only-non-touch.hidden-phone
+            - @recipes.each do |recipe|
+              %div.scrollfinity-item
+                = link_to activity_path(recipe) do
+                  = render 'shared/media_centered', media: recipe, size: 'medium'
+          .btn.btn-gray.btn-block.scrollfinity-down.only-non-touch.hidden-phone
+            %icon.icon-angle-down
       .span4
         %h4.text-center
           = link_to 'Techniques', techniques_path, class: 'black-link'
         - cache @techniques do
-          .swipe#technique-swiper
+          .swipe#technique-swiper.only-touch.visible-phone
             .swipe-wrap
               - @techniques.each do |technique|
                 %div
                   = link_to activity_path(technique) do
                     = render 'shared/media_centered', media: technique, size: 'medium'
+          .vertical-slider-2.scrollfinity.only-non-touch.hidden-phone
+            - @techniques.each do |technique|
+              %div.scrollfinity-item
+                = link_to activity_path(technique) do
+                  = render 'shared/media_centered', media: technique, size: 'medium'
+          .btn.btn-gray.btn-block.scrollfinity-down.only-non-touch.hidden-phone
+            %icon.icon-angle-down
       .span4
         %h4.text-center
           = link_to 'Knowledge', sciences_path, class: 'black-link'
         - cache @sciences do
-          .swipe#knowledge-swiper
+          .swipe#knowledge-swiper.only-touch.visible-phone
             .swipe-wrap
               - @sciences.each do |science|
                 %div
                   = link_to activity_path(science) do
                     = render 'shared/media_centered', media: science, size: 'medium'
+          .vertical-slider-2.scrollfinity.only-non-touch.hidden-phone
+            - @sciences.each do |science|
+              %div.scrollfinity-item
+                = link_to activity_path(science) do
+                  = render 'shared/media_centered', media: science, size: 'medium'
+          .btn.btn-gray.btn-block.scrollfinity-down.only-non-touch.hidden-phone
+            %icon.icon-angle-down
 
 .row.section
   .span12
