--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -905,6 +905,9 @@ h1, h2, h3, h4
   #footer
     margin: 0px -20px
     padding: 0px 20px
+
+  .vertical-slider-2
+    width: 100%
  
 /* Landscape phones and down */
 @media (max-width: 480px)
